# observations

./: .gitignore  .travis.yml  README.md  bib.bib  setup.cfg  setup.py
observations/: __init__.py  abalone.py  boston_housing.py  caltech101_silhouettes.py  celeba.py  celegans.py  cifar10.py  cifar100.py  crabs.py  enwik8.py  fashion_mnist.py  insteval.py  iris.py  jsb_chorales.py  karate.py  lsun.py  mnist.py  multi_mnist.py  musedata.py  nips.py  nottingham.py  piano_midi_de.py  ptb.py  sick.py  small32_imagenet.py  small64_imagenet.py  snelson1d.py  snli.py  stanford_sentiment_treebank.py  svhn.py  text8.py  util.py  version.py  wikitext103.py  wikitext2.py  wine.py  yelp17.py
observations/r/: __init__.py  abbey.py  ability.py  absentee.py  accdeaths.py  accident.py  acf1.py  acme.py  adler.py  admit.py  admnrev.py  affairs.py  affect.py  agefat.py  agriculture.py  aids.py  aids2.py  air_accs.py  air_passengers.py  aircondit.py  aircondit7.py  aircraft.py  airfare.py  airline.py  airmay.py  airmiles.py  airq.py  airquality.py  ais.py  alcohol.py  alcohol1.py  aldh2.py  alfalfa.py  allbacks.py  alloauto.py  allograft.py  ambient_noxch.py  amis.py  aml.py  ams_survey.py  (+1090 more)
src/r/: datasets.csv  gen_data_files.py  gen_src_test_files.sh
tests/r/: test_abbey.py  test_ability.py  test_absentee.py  test_accdeaths.py  test_accident.py  test_acf1.py  test_acme.py  test_adler.py  test_admit.py  test_admnrev.py  test_affairs.py  test_affect.py  test_agefat.py  test_agriculture.py  test_aids.py  test_aids2.py  test_air_accs.py  test_air_passengers.py  test_aircondit.py  (+1110 more)
(+873 files in other folders)
