[metadata]
description-file = README.md

[pep8]
# Skip errors and warnings
# E111 indentation is not a multiple of four
# E114 indentation is not a multiple of four (comment)
# E301 expected 1 blank line, found 0 (for internal function defs)
ignore=E111,E114,E301

# Set maximum allowed line length (default: 79)
max-line-length=80

[tool:pytest]
pep8ignore = E111 E114 E301
pep8maxlinelength = 80
